--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -11,7 +11,7 @@
 
 </div>
 <script type="text/javascript">
-	$('.gallery-slider').slick(galSliderOptions);
-	$('.page-content').trigger('resize');
+	// $('.gallery-slider').slick(galSliderOptions);
+	// $('.page-content').trigger('resize');
 </script>
 {% endblock %}
