--- a/templates/press.html
+++ b/templates/press.html
@@ -11,7 +11,7 @@
                             </a>
                         </div>
                         <div class="this-caption">
-                            <a href="{{ item.external_url }}">{{item.title}}</a>
+                            <a href="{{ item.external_url }}" target="_blank">{{item.title}}</a>
                             <p>{{ item.source }}</p>
                         </div>
                         
