--- a/templates/events.html
+++ b/templates/events.html
@@ -18,29 +18,29 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>DATE</label>
-                                <input name="date" class="form-control" type="text">
+                                <input name="date" class="form-control" type="text" data-validation="date" data-validation-format="dd/mm/yyyy" data-validation-help="dd/mm/yyyy">
                             </div>
                             <div class="form-group">
                                 <label>NUMBER OF GUESTS</label>
-                                <input name="number_of_guests" class="form-control small" type="text">
+                                <input name="number_of_guests" data-validation="number" class="form-control small" type="text">
                             </div>
                             <div class="form-group">
                                 <label>EMAIL</label>
-                                <input name="email" class="form-control" type="email">
+                                <input name="email" class="form-control" type="email" data-validation="email">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>TYPE OF EVENT</label>
-                                <input name="type_of_event" class="form-control" type="text">
+                                <input name="type_of_event" class="form-control" type="text" data-validation="required">
                             </div>
                             <div class="form-group">
                                 <label>FULL NAME</label>
-                                <input name="full_name" class="form-control" type="text">
+                                <input name="full_name" data-validation="required" class="form-control" type="text">
                             </div>
                             <div class="form-group">
                                 <label>PHONE</label>
-                                <input name="phone" class="form-control" type="text">
+                                <input name="phone" class="form-control" type="text" data-validation="required" >
                             </div>
                         </div>
                     </div>
@@ -70,6 +70,7 @@
 
 {% block initScripts %}
 <script type="text/javascript">
+$.validate();
 $(document).ready(function() {
     Bento.Forms.initialize({formSelector: 'form'});
 });
